<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Other.NumberRegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_mobile"
                android:padding="10dp"
                android:singleLine="true"
                android:hint="@string/hint_mobile"
                android:maxLength="10"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/proceeds"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/btn_proceed"
                android:minHeight="40dp" />

            <Button
                android:id="@+id/btnback"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/btn_back"
                android:minHeight="40dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>