<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#47528F"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Other.AddFamilyActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Spinner
                    android:id="@+id/familySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:entries="@array/family">

                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="User Name:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtfamily_name"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:hint="Enter User Name"
                    android:maxLength="10"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Address :"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtfamily_address"
                    android:padding="5dp"
                    android:hint="Enter Your Address"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Mobile No:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtfamily_mobile"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:hint="@string/hint_mobile"
                    android:maxLength="10"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Date Of Birth:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtfamily_dob"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:hint="Date Of Birth"
                    android:drawableEnd="@drawable/date"
                    android:maxLength="10"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Email:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/edtfamily_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Spinner
                    android:id="@+id/famgenderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:entries="@array/gender">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Password:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/fampassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:padding="5dp"
                    android:singleLine="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edttext"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Confirm pass-:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_famconfirmpass"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:hint="Confirm Password" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fambloodgrp_spinner"
                    android:padding="5dp"
                    android:entries="@array/blood_group" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/father"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edttext"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Father's Name:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_famfatherName"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:hint="Father's Name"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/Layouts"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_edttext"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Select Your Id:"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/fam_idSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                </Spinner>
            </LinearLayout>
            <EditText
                android:id="@+id/fam_identity_No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="Enter Identity No." />
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@drawable/rounded_edttext"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_image"
                    android:layout_width="80dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="imageclicks"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_camera_blue_24dp"
                    tools:ignore="OnClick" />
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:text="@string/hint_img"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_edttext"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/famphoto"
                        android:layout_width="wrap_content"
                        android:text="User Photo"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/famuserPhoto"
                        android:layout_gravity="center"
                        android:layout_width="180dp"
                        android:layout_height="200dp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_edttext"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/famid"
                        android:layout_width="wrap_content"
                        android:text="User Id Photo"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/famuserId"
                        android:layout_gravity="center"
                        android:layout_width="180dp"
                        android:layout_height="200dp"/>


                </LinearLayout>
            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button

                    android:id="@+id/btnfamilysend"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="Send To Register"
                    android:minHeight="40dp" />
            </LinearLayout>-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>